--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -12,6 +12,7 @@
 
 \item Transparency
 	\subitem "Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user " \cite{Scharm2015}
+	\subitem "Users are often not only interested in the current value of data but also in changes." \cite{Cobena2002}
 \item Tracking differences (Provenance)
 	\subitem what has changed
 	\subitem who has changed it
