--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -388,4 +388,65 @@ Contact: dagmar.waltemath\{at\}uni-rostock.de},
   file = {IEEE Xplore Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/6TK2JEVH/Wang et al. - 2003 - X-Diff an effective change detection algorithm fo.pdf:application/pdf;IEEE Xplore Abstract Record:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/68TKW32F/1260818.html:text/html}
 }
 
+@book{Gentleman2005,
+  series = {Volume 4, Issue 1},
+  title = {Reproducible {{Research}}: {{A Bioinformatics Case Study}}},
+  volume = {4},
+  abstract = {While scientific research and the methodologies involved have gone through substantial tech
+nological evolution the technology involved in the publication of the results of these endeavors has
+remained relatively stagnant. Publication is largely done in the same manner today as it was fifty
+years ago. Many journals have adopted electronic formats, however, their orientation and style is
+little different from a printed document. The documents tend to be static and take little advantage
+of computational resources that might be available. Recent work, Gentleman and Temple Lang
+(2003), suggests a methodology and basic infrastructure that can be used to
+publish
+documents in
+a substantially different way. Their approach is suitable for the publication of papers whose mes-
+sage relies on computation. Stated quite simply, Gentleman and Temple Lang (2003) propose a
+paradigm where documents are mixtures of code and text. Such documents may be self-contained
+or they may be a component of a
+compendium
+which provides the infrastructure needed to provide
+access to data and supporting software. These documents, or compendiums, can be processed in a
+number of different ways. One transformation will be to replace the code with its output \textendash{} thereby
+providing the familiar, but limited, static document.
+\ensuremath{<}
+p /
+\ensuremath{>}
+In this paper we apply these concepts
+to a seminal paper in bioinformatics, namely
+The Molecular Classification of Cancer
+, Golub et al
+(1999). The authors of that paper have generously provided data and other information that have
+allowed us to largely reproduce their results. Rather than reproduce this paper exactly we demonstrate that such a reproduction is possible and instead concentrate on demonstrating the usefulness
+of the compendium concept itself.},
+  timestamp = {2016-08-29T14:47:18Z},
+  number = {1},
+  publisher = {{Statistical Applications in Genetics and Molecular Biology}},
+  author = {Gentleman, Robert},
+  year = {2005},
+  file = {gentleman2005a.pdf:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/CNV7HCF3/gentleman2005a.pdf:application/pdf}
+}
+
+@article{Peng2011,
+  title = {Reproducible {{Research}} in {{Computational Science}}},
+  volume = {334},
+  copyright = {Copyright \textcopyright{} 2011, American Association for the Advancement of Science},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.1213847},
+  abstract = {Computational science has led to exciting new developments, but the nature of the work has exposed limitations in our ability to evaluate published findings. Reproducibility has the potential to serve as a minimum standard for judging scientific claims when full independent replication of a study is not possible.},
+  language = {en},
+  timestamp = {2016-08-29T16:02:40Z},
+  number = {6060},
+  urldate = {2016-08-29},
+  url = {http://science.sciencemag.org/content/334/6060/1226},
+  journal = {Science},
+  author = {Peng, Roger D.},
+  month = dec,
+  year = {2011},
+  pages = {1226--1227},
+  file = {Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/8QBKWBRU/Peng - 2011 - Reproducible Research in Computational Science.pdf:application/pdf;Snapshot:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/V886SVZ6/1226.html:text/html},
+  pmid = {22144613}
+}
+
 
