--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = en_US
 \section{Motivation}
 
 \begin{itemize}
@@ -13,6 +14,10 @@
 \item Reproducibility
 	\subitem \sedml scripts fails, when model changes
 	\subitem cf. (Casadevall and Fang, 2010; Gentleman, 2005; Laine et al., 2007; Mesirov, 2010; Peng, 2011; Sandve et al., 2013; Waltemath et al., 2011, 2013b) \\ refs shameless stolen from bives paper discussion section
+	\subitem " Researchers across a range of computational science disciplines have been calling for reproducibility, or reproducible research, as an attainable minimum standard for assessing the value of scientific claims, particularly when full independent replication of a study is not feasible (4–8)." \cite{Peng2011}
+	\subitem "A critical barrier to reproducibility in many cases is that the computer code is no longer available. Interactive software systems often used for exploratory data analysis typically do not keep track of users’ actions in any concrete form. Even if researchers use software that is run by written code, often multiple packages are used, and the code that combines the different results together is not saved (10). Addressing this problem will require either changing the behavior of the software systems themselves or getting researchers to use other software systems that are more amenable to reproducibility." \cite{Peng2011}
+	\subitem "[...] reproducibility is critical to tracking down the “bugs” of computational science. In cases with interesting findings, reproducibility can 	greatly facilitate building on those findings (12)." \cite{Peng2011}
+	
 
 \item Transparency
 	\subitem "Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user " \cite{Scharm2015}
